--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/router": "17.0.5",
     "@auth0/auth0-angular": "^2.2.2",
     "@auth0/auth0-spa-js": "^2.1.3",
+    "auth0-lock": "^12.4.0",
     "bcrypt": "^5.1.1",
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.4.1",
@@ -29,6 +30,7 @@
     "@angular-devkit/build-angular": "^17.3.2",
     "@angular/cli": "17.0.5",
     "@angular/compiler-cli": "17.0.5",
+    "@types/auth0-lock": "^11.27.9",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
